separating controlers for status
